# Playlist-Manager

./: .gitignore  CMakeLists.txt  README.md
src/: CMakeLists.txt
src/headers/: interface.h  playlist.h
src/sources/: interface.cpp  main.cpp  playlist.cpp
src/tests/: playlist_test.cpp
